--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,4 +12,4 @@ jobs:
         run: docker build -t udm-rasterise-zones .
 
       - name: test
-        run: docker run -v $PWD/data:/data udm-rasterise-zones
+        run: docker run -v $PWD/data:/data --env SORT_ID=code udm-rasterise-zones
